# x_trading

./: .gitignore  README.md  auto_run.py  com.xtrading.auto_run.plist  install_auto_run.sh  pyproject.toml  rename_to_chinese.py  requirements.txt  run.py  uninstall_auto_run.sh
backtest/20251019/金融_银行/: 回测报告_163214.md
backtest/reports/20251019/: 金融_银行_165959.md  金融_银行_170437.md
backtest/summary/: 20251019_170021.md  20251019_171936.md  20251019_173120.md  20251019_180214.md
data/: 000001_daily_data_20251017.csv
docs/: tmp.txt
examples/: date_utils_example.py
reports/backtest/: 回测报告_20251102.md  回测报告_20251103.md
reports/review/: 市场复盘报告_20251024.md  市场复盘报告_20251027.md  市场复盘报告_20251028.md  市场复盘报告_20251029.md  市场复盘报告_20251030.md  市场复盘报告_20251031.md  市场复盘报告_20251103.md  市场复盘报告_20251104.md  市场复盘报告_20251105.md  市场复盘报告_20251106.md  市场复盘报告_20251107.md
reports/sector_signals/: 板块信号报告_20251020_015714.md  板块信号报告_20251020_223848.md  板块信号报告_20251020_231014.md  板块信号报告_20251023_203458.md
src/: __init__.py
src/xtrading/: __init__.py  main.py
src/xtrading/data/: __init__.py  data_loader.py  db.py  industry_history_dao.py  schema_init.py  stock_history_dao.py
src/xtrading/repositories/: __init__.py  concept_info_query.py  heat_query.py  industry_info_query.py  market_overview_query.py  news_query.py  stock_query.py
src/xtrading/services/: __init__.py  backtest_service.py  sector_signal_service.py  signal_report_generator.py
src/xtrading/static/: __init__.py  backtest_report_config.py  (+5 more)
tests/: proxy_config.json  repository_test.py  sector_signal_service_integration_test.py  sector_signal_service_simple_test.py  sector_signal_service_test.py  strategies_test.py
(+337 files in other folders)
